deploy/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: springapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: springapp
    spec:
      containers:
        - name: springapp
          image: git.cs.kent.ac.uk:5050/jwb50/final-year-project-manager:latest_RegForm_backend
          imagePullPolicy: Always
          ports:
            - containerPort: 80
